feat:sale font weight rectangle update

--- a/booking.html
+++ b/booking.html
@@ -284,7 +284,7 @@
                      <p class="viewed-product_price-main">11 500 <span>₽</span></p>
                      <p class="viewed-product_price-sub">9200 ₽</p>
                   </div>
-                  <div class="viewed-product_discont-value">-25%</div>
+                  <div class="viewed-product_discont-value"><span>–</span>25<span>%</span></div>
                </div>
                <div class="viewed-product">
                   <img class="viewed-product_img" src="./assets/content/viewed-product-4.png" alt="" />
