--- a/catalog.html
+++ b/catalog.html
@@ -161,7 +161,7 @@
                         <p class="huge_discription">89 см | Золотое</p>
                      </div>
                      <img class="catalog-mid_like" src="./assets/icon/like-black.svg" alt="" style="width: 22px" />
-                     <div class="viewed-product_discont-value">-15%</div>
+                     <div class="viewed-product_discont-value"><span>–</span>15<span>%</span></div>
                   </div>
                </div>
                <div class="div2 small-div">
@@ -188,7 +188,7 @@
                         <p class="huge_discription">69 х 109 см | Бронза</p>
                      </div>
                      <img class="catalog-mid_like" src="./assets/icon/like-black.svg" alt="" style="width: 22px" />
-                     <div class="viewed-product_discont-value">-5%</div>
+                     <div class="viewed-product_discont-value"><span>–</span>5<span>%</span></div>
                   </div>
                </div>
                <div class="div4 small-div">
@@ -215,7 +215,7 @@
                         <p class="huge_discription">89 см | Золотое</p>
                      </div>
                      <img class="catalog-mid_like" src="./assets/icon/like-black.svg" alt="" style="width: 22px" />
-                     <div class="viewed-product_discont-value">-15%</div>
+                     <div class="viewed-product_discont-value"><span>–</span>15<span>%</span></div>
                   </div>
                </div>
                <div class="div6">
@@ -268,7 +268,7 @@
                         <p class="huge_discription">86 см | Золотое</p>
                      </div>
                      <img class="catalog-mid_like" src="./assets/icon/like-black.svg" alt="" style="width: 22px" />
-                     <div class="viewed-product_discont-value">-20%</div>
+                     <div class="viewed-product_discont-value"><span>–</span>20<span>%</span></div>
                   </div>
                </div>
                <div class="div10">
@@ -347,7 +347,7 @@
                         <p class="huge_discription">40 см | Черные | Серебро</p>
                      </div>
                      <img class="catalog-mid_like" src="./assets/icon/like-black.svg" alt="" style="width: 22px" />
-                     <div class="viewed-product_discont-value">-15%</div>
+                     <div class="viewed-product_discont-value"><span>–</span>15<span>%</span></div>
                   </div>
                </div>
             </div>
@@ -483,7 +483,7 @@
                      <p class="viewed-product_price-main">11 500 <span>₽</span></p>
                      <p class="viewed-product_price-sub">9200 ₽</p>
                   </div>
-                  <div class="viewed-product_discont-value">-25%</div>
+                  <div class="viewed-product_discont-value"><span>–</span>25<span>%</span></div>
                </div>
                <div class="viewed-product">
                   <img class="viewed-product_img" src="./assets/content/viewed-product-4.png" alt="" />
