feat: link to img update

--- a/home.html
+++ b/home.html
@@ -133,7 +133,7 @@
                         <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                         <p class="line_line"></p>
                      </div>
-                     <img src="/assets/icon/Button.svg" alt="" />
+                     <img src="./assets/icon/Button.svg" alt="" />
                   </div>
                </div>
                <div class="bg-block-correct-position catalog-home-block-2">
@@ -144,7 +144,7 @@
                         <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                         <p class="line_line"></p>
                      </div>
-                     <img src="/assets/icon/Button.svg" alt="" />
+                     <img src="./assets/icon/Button.svg" alt="" />
                   </div>
                </div>
                <div class="bg-block-correct-position catalog-home-block-3">
@@ -155,7 +155,7 @@
                         <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                         <p class="line_line"></p>
                      </div>
-                     <img src="/assets/icon/Button.svg" alt="" />
+                     <img src="./assets/icon/Button.svg" alt="" />
                   </div>
                </div>
                <div class="bg-block-correct-position catalog-home-block-4">
@@ -166,7 +166,7 @@
                         <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                         <p class="line_line"></p>
                      </div>
-                     <img src="/assets/icon/Button.svg" alt="" />
+                     <img src="./assets/icon/Button.svg" alt="" />
                   </div>
                </div>
                <div class="last-block-in-catalog-goods-home">
@@ -178,7 +178,7 @@
                            <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                            <p class="line_line"></p>
                         </div>
-                        <img src="/assets/icon/Button.svg" alt="" />
+                        <img src="./assets/icon/Button.svg" alt="" />
                      </div>
                   </div>
                   <div class="bg-block-correct-position catalog-home-block-6">
@@ -189,7 +189,7 @@
                            <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                            <p class="line_line"></p>
                         </div>
-                        <img src="/assets/icon/Button.svg" alt="" />
+                        <img src="./assets/icon/Button.svg" alt="" />
                      </div>
                   </div>
                   <div class="red-circle">Каталог</div>
