feat: text trought price update

--- a/basket.html
+++ b/basket.html
@@ -124,7 +124,7 @@
                         </div>
                         <div class="basket-product-price-box">
                            <div class="product-box__price___price">45 900 <span>₽</span></div>
-                           <div class="product-box__price___price-old opacity">51 900 ₽</div>
+                           <div class="product-box__price___price-old opacity"><span>51 900</span> ₽</div>
                         </div>
                      </div>
                   </div>
@@ -147,7 +147,7 @@
                            </div>
                            <div class="basket-product-price-box">
                               <div class="product-box__price___price">3 х 4 900 <span>₽</span></div>
-                              <div class="product-box__price___price-old zero-opacity">51 900 ₽</div>
+                              <div class="product-box__price___price-old zero-opacity"><span>51 900</span> ₽</div>
                            </div>
                         </div>
                      </div>
@@ -169,7 +169,7 @@
                         </div>
                         <div class="basket-product-price-box">
                            <div class="product-box__price___price">300 <span>₽</span></div>
-                           <div class="product-box__price___price-old zero-opacity">51 900 ₽</div>
+                           <div class="product-box__price___price-old zero-opacity"><span>51 900</span> ₽</div>
                         </div>
                      </div>
                   </div>
@@ -223,7 +223,7 @@
                      <p class="block_row__price">0 <span>₽</span></p>
                   </div>
                   <input type="text" class="promo-imput" id="promo-imput" placeholder="Введите промокод" />
-                  <p class="product-box__price___price-old opacity total-summ-old">66 900 ₽</p>
+                  <p class="product-box__price___price-old opacity total-summ-old"><span>66 900</span> ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
                      <p class="block_row__price last-price">60 900 <span>₽</span></p>
