--- a/booking.html
+++ b/booking.html
@@ -177,7 +177,7 @@
                      <p class="block_row__price">0 <span>₽</span></p>
                   </div>
                   <input type="text" class="promo-imput" id="promo-imput" placeholder="Введите промокод" />
-                  <p class="product-box__price___price-old opacity total-summ-old">66 900 ₽</p>
+                  <p class="product-box__price___price-old opacity total-summ-old"><span>66 900</span> ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
                      <p class="block_row__price">60 900 <span>₽</span></p>
