--- a/product.html
+++ b/product.html
@@ -222,7 +222,7 @@
                         </div>
                         <div class="interior_product-box__price">
                            <p class="product-box__price___price">29 800 <span>₽</span></p>
-                           <p class="product-box__price___price-old opacity">51 900 ₽</p>
+                           <p class="product-box__price___price-old opacity"><span>51 900</span> ₽</p>
                         </div>
                      </div>
                   </div>
