--- a/cabinet.html
+++ b/cabinet.html
@@ -187,7 +187,7 @@
                      <div class="gray-line_line-24"></div>
                   </div>
 
-                  <p class="product-box__price___price-old opacity total-summ-old">186 900 ₽</p>
+                  <p class="product-box__price___price-old opacity total-summ-old"><span>186 900</span> ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
                      <p class="block_row__price">147 880 <span>₽</span></p>
@@ -317,7 +317,7 @@
                      <div class="gray-line_line-24"></div>
                   </div>
 
-                  <p class="product-box__price___price-old opacity total-summ-old">186 900 ₽</p>
+                  <p class="product-box__price___price-old opacity total-summ-old"><span>186 900</span> ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
                      <p class="block_row__price">147 880 <span>₽</span></p>
