feat: footer update

--- a/basket.html
+++ b/basket.html
@@ -346,7 +346,7 @@
       </main>
       <footer>
          <div class="footer_left-side">
-            <img src="./assets/icon/Logo_Apriori.svg" alt="" style="width: 182px" />
+            <img src="./assets/icon/Apriori_Logo_White-footer-update.svg" alt="" />
             <div class="footer_discription none">
                <p><span class="footer_bold-text">APRIORI DESIGN</span> © Все права защищены 2022 — 2023</p>
                <p>Cтоимость и условия приобретения товара действительны на текущую дату</p>
