--- a/cabinet.html
+++ b/cabinet.html
@@ -190,7 +190,7 @@
                   <p class="product-box__price___price-old opacity total-summ-old"><span>186 900</span> ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
-                     <p class="block_row__price">147 880 <span>₽</span></p>
+                     <p class="block_row__price price-32-px">147 880 <span>₽</span></p>
                   </div>
                   <p class="summ-block_discr cashback-info">Как работает кешбэк? <img src="./assets/icon/coral-quest.svg" class="pointer" alt="" /></p>
                </div>
@@ -320,7 +320,7 @@
                   <p class="product-box__price___price-old opacity total-summ-old"><span>186 900</span> ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
-                     <p class="block_row__price">147 880 <span>₽</span></p>
+                     <p class="block_row__price price-32-px">147 880 <span>₽</span></p>
                   </div>
                   <p class="summ-block_discr cashback-info">Как работает кешбэк? <img src="./assets/icon/coral-quest.svg" class="pointer" alt="" /></p>
                </div>
@@ -373,7 +373,7 @@
       </main>
       <footer>
          <div class="footer_left-side">
-            <img src="./assets/icon/Logo_Apriori.svg" alt="" style="width: 182px" />
+            <img src="./assets/icon/Apriori_Logo_White-footer-update.svg" alt=""   />
             <div class="footer_discription none">
                <p><span class="footer_bold-text">APRIORI DESIGN</span> © Все права защищены 2022 — 2023</p>
                <p>Cтоимость и условия приобретения товара действительны на текущую дату</p>
