feat: get slider for home first step

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
    </head>
    <body>
       <header class="home-header">
-         <nav class="home-nav-menu">
+         <nav class="home-nav-menu nav-absolut">
             <div class="burger-btn" onclick="toggleMenu()">
                <div class="burger-btn-desctop">
                   <img class="svg-class" src="./assets/icon/Menu-3-lines-w-update.svg" alt="" />
