--- a/home.html
+++ b/home.html
@@ -197,8 +197,6 @@
                   Предметы интерьера, антикварные <br />
                   и винтажные аксессуары по выгодной цене.
                </p>
-
-
             </div>
             <div class="home-header">
                <div class="title-box">
@@ -218,8 +216,6 @@
                   Предметы интерьера, антикварные <br />
                   и винтажные аксессуары по выгодной цене.
                </p>
-
-
             </div>
          </div>
          <nav class="home-nav-menu nav-absolut">
@@ -408,7 +404,16 @@
                <div class="product-cards-container">
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-white" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#ffffff3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="white"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
@@ -421,7 +426,16 @@
 
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/79763\ 1.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-blk" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="#1D1D1D"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
@@ -434,7 +448,16 @@
 
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1533.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-blk" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="#1D1D1D"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
@@ -447,7 +470,16 @@
 
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-white" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#ffffff3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="white"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
