--- a/basket.html
+++ b/basket.html
@@ -190,6 +190,12 @@
                <div class="basket">
                   <h3 class="basket_title">Ваши товары</h3>
                   <div class="basket_product discont">
+                     <div class="check-basket">
+                        <label>
+                           <input type="checkbox" />
+                           <span class="custom-checkbox"></span>
+                        </label>
+                     </div>
                      <img src="./assets/content/catalog-item-1.png" alt="" class="interior_product-box__img" />
                      <div class="basket-product__mid discont">
                         <div class="basket_product__text">
@@ -197,7 +203,7 @@
                            <p class="basket_product__text-subtitle">89 см | Золотое</p>
                         </div>
                         <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
-                        <div class="product_discont-value">-15%</div>
+                        <div class="product_discont-value basket-sale">-15%</div>
                      </div>
                      <div class="basket-product__end discont">
                         <div class="basket-count-buttons buttons-block">
@@ -205,7 +211,7 @@
                            <div class="basket-btn_minus"></div>
                         </div>
                         <div class="basket-product-price-box">
-                           <div class="product-box__price___price">45 900 <span>₽</span></div>
+                           <div class="product-box__price___price basket-box-price">45 900 <span>₽</span></div>
                            <div class="product-box__price___price-old opacity"><span>51 900</span> ₽</div>
                         </div>
                      </div>
@@ -213,6 +219,12 @@
                   <div class="basket-product-box hover">
                      <input class="basket-checkbox" type="checkbox" />
                      <div class="basket_product in-cart">
+                        <div class="check-basket">
+                           <label>
+                              <input type="checkbox" />
+                              <span class="custom-checkbox"></span>
+                           </label>
+                        </div>
                         <img src="./assets/content/interiour-dop-2.png" alt="" class="interior_product-box__img" />
                         <div class="basket-product__mid target">
                            <div class="basket_product__text">
@@ -220,7 +232,7 @@
                               <p class="basket_product__text-subtitle">48 см</p>
                            </div>
                            <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
-                           <div class="product_discont-value none">-15%</div>
+                           <div class="product_discont-value basket-sale none">-15%</div>
                         </div>
                         <div class="basket-product__end">
                            <div class="basket-count-buttons">
@@ -228,13 +240,19 @@
                               <div class="basket-btn_minus"></div>
                            </div>
                            <div class="basket-product-price-box">
-                              <div class="product-box__price___price">3 х 4 900 <span>₽</span></div>
+                              <div class="product-box__price___price basket-box-price">3 х 4 900 <span>₽</span></div>
                               <div class="product-box__price___price-old zero-opacity"><span>51 900</span> ₽</div>
                            </div>
                         </div>
                      </div>
                   </div>
                   <div class="basket_product">
+                     <div class="check-basket">
+                        <label>
+                           <input type="checkbox" />
+                           <span class="custom-checkbox"></span>
+                        </label>
+                     </div>
                      <img src="./assets/content/interiour-dop-1.png" alt="" class="interior_product-box__img" />
                      <div class="basket-product__mid">
                         <div class="basket_product__text">
@@ -242,7 +260,7 @@
                            <p class="basket_product__text-subtitle">25 см | Терракота</p>
                         </div>
                         <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
-                        <div class="product_discont-value none">-15%</div>
+                        <div class="product_discont-value basket-sale none">-15%</div>
                      </div>
                      <div class="basket-product__end">
                         <div class="basket-count-buttons buttons-block">
@@ -250,12 +268,18 @@
                            <div class="basket-btn_minus"></div>
                         </div>
                         <div class="basket-product-price-box">
-                           <div class="product-box__price___price">300 <span>₽</span></div>
+                           <div class="product-box__price___price basket-box-price">300 <span>₽</span></div>
                            <div class="product-box__price___price-old zero-opacity"><span>51 900</span> ₽</div>
                         </div>
                      </div>
                   </div>
                   <div class="basket_product">
+                     <div class="check-basket">
+                        <label>
+                           <input type="checkbox" />
+                           <span class="custom-checkbox"></span>
+                        </label>
+                     </div>
                      <img src="./assets/content/svecha-aromatyzyrovannaia-s-podsvechnykom-pentas-belaia-bezhevaia-701025 1.png" alt="" class="interior_product-box__img" />
                      <div class="basket-product__mid">
                         <div class="basket_product__text">
@@ -263,7 +287,7 @@
                            <p class="basket_product__text-subtitle">12 см | Без запаха</p>
                         </div>
                         <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
-                        <div class="product_discont-value none">-15%</div>
+                        <div class="product_discont-value basket-sale none">-15%</div>
                      </div>
                      <div class="basket-product__end">
                         <div class="basket-count-buttons buttons-block">
@@ -271,7 +295,7 @@
                            <div class="basket-btn_minus"></div>
                         </div>
                         <div class="basket-product-price-box">
-                           <div class="product-box__price___price">0 <span>₽</span></div>
+                           <div class="product-box__price___price basket-box-price">0 <span>₽</span></div>
                            <div class="product-box__price___price-old gift opacity">В подарок</div>
                         </div>
                      </div>
@@ -394,7 +418,7 @@
                      <p class="viewed-product_price-main">38 900 <span>₽</span></p>
                      <p class="viewed-product_price-sub"></p>
                   </div>
-                  <div class="viewed-product_discont-value none"></div>
+                  <div class="viewed-product_discont-value basket-sale none"></div>
                </div>
                <div class="viewed-product">
                   <img class="viewed-product_img" src="./assets/content/viewed-product-2.png" alt="" />
@@ -403,7 +427,7 @@
                      <p class="viewed-product_price-main">45 900 <span>₽</span></p>
                      <p class="viewed-product_price-sub"></p>
                   </div>
-                  <div class="viewed-product_discont-value none">%</div>
+                  <div class="viewed-product_discont-value basket-sale none">%</div>
                </div>
                <div class="viewed-product">
                   <img class="viewed-product_img" src="./assets/content/viewed-product-3.png" alt="" />
@@ -412,7 +436,7 @@
                      <p class="viewed-product_price-main">11 500 <span>₽</span></p>
                      <p class="viewed-product_price-sub">9200 ₽</p>
                   </div>
-                  <div class="viewed-product_discont-value"><span>–</span>25<span>%</span></div>
+                  <div class="viewed-product_discont-value basket-sale"><span>–</span>25<span>%</span></div>
                </div>
                <div class="viewed-product">
                   <img class="viewed-product_img" src="./assets/content/viewed-product-4.png" alt="" />
@@ -421,7 +445,7 @@
                      <p class="viewed-product_price-main">29 800 <span>₽</span></p>
                      <p class="viewed-product_price-sub"></p>
                   </div>
-                  <div class="viewed-product_discont-value none"></div>
+                  <div class="viewed-product_discont-value basket-sale none"></div>
                </div>
             </div>
          </div>
@@ -503,7 +527,10 @@
                      <a href=""
                         ><svg class="svg-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                            <g clip-path="url(#clip0_970_1466)">
-                              <path d="M47.5 24C47.5 36.9787 36.9787 47.5 24 47.5C11.0213 47.5 0.5 36.9787 0.5 24C0.5 11.0213 11.0213 0.5 24 0.5C36.9787 0.5 47.5 11.0213 47.5 24Z" stroke="#1D1D1D3D" />
+                              <path
+                                 d="M47.5 24C47.5 36.9787 36.9787 47.5 24 47.5C11.0213 47.5 0.5 36.9787 0.5 24C0.5 11.0213 11.0213 0.5 24 0.5C36.9787 0.5 47.5 11.0213 47.5 24Z"
+                                 stroke="#1D1D1D3D"
+                              />
                               <path
                                  d="M9.98766 23.7918C9.98766 23.7918 21.9877 18.867 26.1494 17.1328C27.7449 16.4392 33.1552 14.2195 33.1552 14.2195C33.1552 14.2195 35.6524 13.2485 35.4443 15.6068C35.3749 16.578 34.82 19.9767 34.2651 23.6531C33.4327 28.8554 32.531 34.5432 32.531 34.5432C32.531 34.5432 32.3922 36.1386 31.2131 36.4161C30.0339 36.6935 28.0916 35.445 27.7449 35.1675C27.4673 34.9595 22.5425 31.838 20.7391 30.312C20.2535 29.8958 19.6986 29.0635 20.8084 28.0924C23.3055 25.8034 26.2882 22.9595 28.0916 21.156C28.924 20.3236 29.7564 18.3814 26.2882 20.7397C21.3634 24.1386 16.5079 27.3294 16.5079 27.3294C16.5079 27.3294 15.398 28.023 13.3171 27.3987C11.2361 26.7745 8.80839 25.9421 8.80839 25.9421C8.80839 25.9421 7.14375 24.9016 9.98766 23.7918Z"
                                  fill="#262626"
@@ -521,7 +548,10 @@
                      <a href=""
                         ><svg class="svg-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                            <g clip-path="url(#clip0_970_1469)">
-                              <path d="M47.5 24C47.5 36.9787 36.9787 47.5 24 47.5C11.0213 47.5 0.5 36.9787 0.5 24C0.5 11.0213 11.0213 0.5 24 0.5C36.9787 0.5 47.5 11.0213 47.5 24Z" stroke="#1D1D1D3D" />
+                              <path
+                                 d="M47.5 24C47.5 36.9787 36.9787 47.5 24 47.5C11.0213 47.5 0.5 36.9787 0.5 24C0.5 11.0213 11.0213 0.5 24 0.5C36.9787 0.5 47.5 11.0213 47.5 24Z"
+                                 stroke="#1D1D1D3D"
+                              />
                               <path
                                  fill-rule="evenodd"
                                  clip-rule="evenodd"
@@ -545,7 +575,10 @@
                      <a href=""
                         ><svg class="svg-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                            <g clip-path="url(#clip0_970_1473)">
-                              <path d="M47.5 24C47.5 36.9787 36.9787 47.5 24 47.5C11.0213 47.5 0.5 36.9787 0.5 24C0.5 11.0213 11.0213 0.5 24 0.5C36.9787 0.5 47.5 11.0213 47.5 24Z" stroke="#1D1D1D3D" />
+                              <path
+                                 d="M47.5 24C47.5 36.9787 36.9787 47.5 24 47.5C11.0213 47.5 0.5 36.9787 0.5 24C0.5 11.0213 11.0213 0.5 24 0.5C36.9787 0.5 47.5 11.0213 47.5 24Z"
+                                 stroke="#1D1D1D3D"
+                              />
                               <path
                                  d="M37.3575 17.126C37.5521 16.4769 37.3575 16 36.4311 16H33.3679C32.5891 16 32.23 16.412 32.0352 16.8663C32.0352 16.8663 30.4775 20.6633 28.2707 23.1297C27.5568 23.8436 27.2322 24.0708 26.8428 24.0708C26.6481 24.0708 26.3663 23.8436 26.3663 23.1946V17.126C26.3663 16.3471 26.1402 16 25.4911 16H20.6775C20.1908 16 19.898 16.3615 19.898 16.7041C19.898 17.4425 21.0014 17.6127 21.1151 19.6897V24.2006C21.1151 25.1896 20.9365 25.3689 20.547 25.3689C19.5086 25.3689 16.9826 21.555 15.4844 17.1909C15.1908 16.3426 14.8963 16 14.1135 16H11.0503C10.175 16 10 16.412 10 16.8663C10 17.6777 11.0385 21.7018 14.8354 27.024C17.3667 30.6586 20.933 32.6289 24.1783 32.6289C26.1254 32.6289 26.3663 32.1913 26.3663 31.4375V28.6904C26.3663 27.8152 26.5508 27.6406 27.1674 27.6406C27.6217 27.6406 28.4006 27.8677 30.2179 29.6202C32.2949 31.6971 32.6373 32.6289 33.8055 32.6289H36.8687C37.7439 32.6289 38.1816 32.1913 37.9291 31.3277C37.6529 30.467 36.6612 29.2182 35.3454 27.7379C34.6314 26.8942 33.5605 25.9855 33.236 25.5311C32.7816 24.947 32.9115 24.6874 33.236 24.1682C33.236 24.1682 36.9681 18.9108 37.3575 17.126Z"
                                  fill="#262626"
