feat: fonts and borders update and fix

--- a/booking.html
+++ b/booking.html
@@ -262,7 +262,7 @@
                   <p class="product-box__price___price-old opacity total-summ-old"><span>66 900</span> ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
-                     <p class="block_row__price">60 900 <span>₽</span></p>
+                     <p class="block_row__price last-price">60 900 <span>₽</span></p>
                   </div>
                   <div class="summ-checkout-btn">Оформить заказ</div>
                </div>
