save deploy version (#52)
* feat: img 48 set size

* feat: link to img update

* feat: like btn catalog update width and position

* fix: border update

* feat: exctusive shtapm update position and media

* feat: collection bg update, product page colors update

* feat: text trought price update

* feat: toggle cart yeloow update

* feat: footer update

* feat: social webs hower to svg update in burger and footer

* feat: get slider for home first step

* feat: slider second step, prepair 2 column

* feat: background for slider complete

* feat: slider complete

* feat: slider will be finished

* feat: like / unlike at home add hover + active / unactiva state

* feat: still git

* feat: home html update

* feat: media correct

* feat: media corrects from figma v4

* feat: fonts update v5

* feat: add checkboxes for basket items

* feat: fonts and borders update and fix

--- a/home.html
+++ b/home.html
@@ -18,19 +18,25 @@
                   <img class="svg-class" src="./assets/icon/nav-btn-dark.svg" alt="" />
                   <p class="menu-text-black">Меню</p>
                </div>
-               <div class="line">
-                  <img src="./assets/icon/Rectangle 1860.svg" alt="" />
-                  <p class="line_line"></p>
+               <div class="logo-icon">
+                  <img style="width: 140px" src="./assets/icon/logo-footer-small-blk-update.svg" alt="logo" />
                </div>
-               <p class="subtitle-home">
-                  Предметы интерьера, антикварные <br />
-                  и винтажные аксессуары по выгодной цене.
-               </p>
-               <div class="header-slider-buttons">
-                  <img class="header-slider-buttons_prev" src="./assets/icon/Button.svg" alt="" />
-                  <img class="header-slider-buttons_next" src="./assets/icon/Button.svg" alt="" />
-               </div>
-
+               <ul class="nav-buttons">
+                  <li><img src="./assets/icon/nav-1-dark.svg" alt="" /></li>
+                  <li><img src="./assets/icon/nav-2-dark.svg" alt="" /></li>
+                  <li><img src="./assets/icon/nav-3-dark.svg" alt="" /></li>
+                  <li><img src="./assets/icon/nav-4-dark.svg" alt="" /></li>
+               </ul>
+            </nav>
+            <div class="hidden-nav-menu">
+               <ul class="nav-list">
+                  <li class="nav-list-title">Каталог</li>
+                  <li class="nav-list-list pointer"><a href="">Часы</a></li>
+                  <li class="nav-list-list pointer"><a href="">Зеркала</a></li>
+                  <li class="nav-list-list pointer"><a href="">Вазы</a></li>
+                  <li class="nav-list-list pointer"><a href="">Картины и Панно</a></li>
+                  <li class="nav-list-list pointer"><a href="">Декор</a></li>
+               </ul>
                <ul class="nav-list">
                   <li class="nav-list-title">Компания</li>
                   <li class="nav-list-list pointer"><a href="">О нас</a></li>
@@ -234,7 +240,6 @@
          <div class="header-slider-buttons">
             <img class="header-slider-buttons_prev" src="./assets/icon/Button.svg" alt="" />
             <img class="header-slider-buttons_next" src="./assets/icon/Button.svg" alt="" />
-
          </div>
       </header>
       <main>
