feat: last changec font size and figma corrects

--- a/cabinet.html
+++ b/cabinet.html
@@ -250,18 +250,18 @@
                      <p class="bonus-card_name">Konstantin К.</p>
                   </div>
                   <div class="cabinet-block">
-                     <p class="summ-title">Статистика</p>
+                     <p class="summ-title stat">Статистика</p>
                      <div class="summ-block_row">
                         <p class="block_row__value">Заказы</p>
-                        <p class="block_row__price">5 <span>шт.</span></p>
+                        <p class="block_row__price stat-value">5 <span>шт.</span></p>
                      </div>
                      <div class="summ-block_row">
                         <p class="block_row__value">Товары</p>
-                        <p class="block_row__price">9 <span>шт.</span></p>
+                        <p class="block_row__price stat-value">9 <span>шт.</span></p>
                      </div>
                      <div class="summ-block_row">
                         <p class="block_row__value">Подарки</p>
-                        <p class="block_row__price">1 <span>шт.</span></p>
+                        <p class="block_row__price stat-value">1 <span>шт.</span></p>
                      </div>
                   </div>
                   <div class="gray-line">
@@ -272,7 +272,7 @@
                   <p class="product-box__price___price-old opacity total-summ-old"><span>186 900</span> ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
-                     <p class="block_row__price price-32-px">147 880 <span>₽</span></p>
+                     <p class="block_row__price price-32-px stat">147 880 <span>₽</span></p>
                   </div>
                   <p class="summ-block_discr cashback-info">Как работает кешбэк? <img src="./assets/icon/coral-quest.svg" class="pointer" alt="" /></p>
                </div>
@@ -380,18 +380,18 @@
                      <p class="bonus-card_name">Konstantin К.</p>
                   </div>
                   <div class="cabinet-block">
-                     <p class="summ-title">Статистика</p>
+                     <p class="summ-title stat">Статистика</p>
                      <div class="summ-block_row">
                         <p class="block_row__value">Заказы</p>
-                        <p class="block_row__price">5 <span>шт.</span></p>
+                        <p class="block_row__price stat-value">5 <span>шт.</span></p>
                      </div>
                      <div class="summ-block_row">
                         <p class="block_row__value">Товары</p>
-                        <p class="block_row__price">9 <span>шт.</span></p>
+                        <p class="block_row__price stat-value">9 <span>шт.</span></p>
                      </div>
                      <div class="summ-block_row">
                         <p class="block_row__value">Подарки</p>
-                        <p class="block_row__price">1 <span>шт.</span></p>
+                        <p class="block_row__price stat-value">1 <span>шт.</span></p>
                      </div>
                   </div>
                   <div class="gray-line">
@@ -402,7 +402,7 @@
                   <p class="product-box__price___price-old opacity total-summ-old"><span>186 900</span> ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
-                     <p class="block_row__price price-32-px">147 880 <span>₽</span></p>
+                     <p class="block_row__price price-32-px stat">147 880 <span>₽</span></p>
                   </div>
                   <p class="summ-block_discr cashback-info">Как работает кешбэк? <img src="./assets/icon/coral-quest.svg" class="pointer" alt="" /></p>
                </div>
