feat: link will be added to vertical slider

--- a/home.html
+++ b/home.html
@@ -331,13 +331,15 @@
                         <p class="panel_magic__title">Итальянский стиль</p>
                         <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
                         <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
-                        <p class="panel_magic__show-collection">
-                           Смотреть коллекцию
-                           <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                              <circle cx="24" cy="24" r="23" stroke="white" />
-                              <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
-                           </svg>
-                        </p>
+                        <a class="link-normal-text" href="">
+                           <p class="panel_magic__show-collection">
+                              Смотреть коллекцию
+                              <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                 <circle cx="24" cy="24" r="23" stroke="white" />
+                                 <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
+                              </svg>
+                           </p>
+                        </a>
                      </div>
                   </div>
                   <div class="panel panel-second" style="background-image: url('./assets/content/wertical-slider-2.jpg')">
@@ -350,14 +352,15 @@
                         <p class="panel_magic__title">Американский лофт</p>
                         <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
                         <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
-                        <p class="panel_magic__show-collection">
-                           Смотреть коллекцию
-                           <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                              <circle cx="24" cy="24" r="23" stroke="white" />
-                              <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
-                           </svg>
-
-                        </p>
+                        <a class="link-normal-text" href="">
+                           <p class="panel_magic__show-collection">
+                              Смотреть коллекцию
+                              <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                 <circle cx="24" cy="24" r="23" stroke="white" />
+                                 <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
+                              </svg>
+                           </p>
+                        </a>
                      </div>
                   </div>
                   <div class="panel panel-third" style="background-image: url('./assets/content/wertical-slider-3.jpg')">
@@ -370,14 +373,15 @@
                         <p class="panel_magic__title">Хай-тек</p>
                         <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
                         <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
-                        <p class="panel_magic__show-collection">
-                           Смотреть коллекцию
-                           <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                              <circle cx="24" cy="24" r="23" stroke="white" />
-                              <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
-                           </svg>
-
-                        </p>
+                        <a class="link-normal-text" href="">
+                           <p class="panel_magic__show-collection">
+                              Смотреть коллекцию
+                              <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                 <circle cx="24" cy="24" r="23" stroke="white" />
+                                 <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
+                              </svg>
+                           </p>
+                        </a>
                      </div>
                   </div>
                   <div class="panel panel-four" style="background-image: url('./assets/content/wertical-slider-4.jpg')">
@@ -390,14 +394,15 @@
                         <p class="panel_magic__title">Скандинавский стиль</p>
                         <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
                         <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
-                        <p class="panel_magic__show-collection">
-                           Смотреть коллекцию
-                           <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                              <circle cx="24" cy="24" r="23" stroke="white" />
-                              <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
-                           </svg>
-
-                        </p>
+                        <a class="link-normal-text" href="">
+                           <p class="panel_magic__show-collection">
+                              Смотреть коллекцию
+                              <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                 <circle cx="24" cy="24" r="23" stroke="white" />
+                                 <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
+                              </svg>
+                           </p>
+                        </a>
                      </div>
                   </div>
                   <div class="panel panel-five" style="background: black">
@@ -410,14 +415,15 @@
                         <p class="panel_magic__title">Стили</p>
                         <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
                         <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
-                        <p class="panel_magic__show-collection">
-                           Смотреть коллекцию
-                           <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                              <circle cx="24" cy="24" r="23" stroke="white" />
-                              <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
-                           </svg>
-
-                        </p>
+                        <a class="link-normal-text" href="">
+                           <p class="panel_magic__show-collection">
+                              Смотреть коллекцию
+                              <svg class="see-collection-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                 <circle cx="24" cy="24" r="23" stroke="white" />
+                                 <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="#ffffff" />
+                              </svg>
+                           </p>
+                        </a>
                      </div>
                   </div>
                </div>
