feat: arrows add hover (yellow and circle black to yellow)

--- a/home.html
+++ b/home.html
@@ -730,8 +730,14 @@
                      <div class="leave-feedback-btn">Оставить отзыв</div>
                   </div>
                   <div class="control-panel_pag-btns control-panel-reviews">
-                     <img class="control-panel_prev-btn review-scroll-prev-btn" src="./assets/icon/Button (7).svg" alt="" />
-                     <img class="control-panel_next-btn review-scroll-next-btn" src="./assets/icon/Button (7).svg" alt="" />
+                     <svg class="control-panel_prev-btn arrow-svg-btn review-scroll-prev-btn pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="24" cy="24" r="23.5" stroke="#1D1D1D7e" />
+                        <path d="M23 32L31 24M31 24L23 16M31 24H15" stroke="#1D1D1D" />
+                     </svg>
+                     <svg class="control-panel_next-btn arrow-svg-btn review-scroll-next-btn pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="24" cy="24" r="23.5" stroke="#1D1D1D7e" />
+                        <path d="M23 32L31 24M31 24L23 16M31 24H15" stroke="#1D1D1D" />
+                     </svg>
                   </div>
                </div>
             </div>
