feat: basket focus and hover white update (demo) v 2.1

--- a/basket.html
+++ b/basket.html
@@ -206,7 +206,7 @@
                         <div class="product_discont-value basket-sale">-15%</div>
                      </div>
                      <div class="basket-product__end discont">
-                        <div class="basket-count-buttons buttons-block">
+                        <div class="basket-count-buttons">
                            <div class="basket-btn_plus"></div>
                            <div class="basket-btn_minus"></div>
                         </div>
@@ -216,8 +216,8 @@
                         </div>
                      </div>
                   </div>
-                  <div class="basket-product-box hover">
-                     <input class="basket-checkbox" type="checkbox" />
+                  <!-- <div class="basket-product-box hover"> -->
+                     <!-- <input class="basket-checkbox" type="checkbox" /> -->
                      <div class="basket_product in-cart">
                         <div class="check-basket">
                            <label>
@@ -226,7 +226,7 @@
                            </label>
                         </div>
                         <img src="./assets/content/interiour-dop-2.png" alt="" class="interior_product-box__img" />
-                        <div class="basket-product__mid target">
+                        <div class="basket-product__mid">
                            <div class="basket_product__text">
                               <p class="basket_product__text-title">Интерьерная подушка в восточном стиле</p>
                               <p class="basket_product__text-subtitle">48 см</p>
@@ -245,7 +245,7 @@
                            </div>
                         </div>
                      </div>
-                  </div>
+                  <!-- </div> -->
                   <div class="basket_product">
                      <div class="check-basket">
                         <label>
@@ -263,7 +263,7 @@
                         <div class="product_discont-value basket-sale none">-15%</div>
                      </div>
                      <div class="basket-product__end">
-                        <div class="basket-count-buttons buttons-block">
+                        <div class="basket-count-buttons">
                            <div class="basket-btn_plus"></div>
                            <div class="basket-btn_minus"></div>
                         </div>
@@ -290,7 +290,7 @@
                         <div class="product_discont-value basket-sale none">-15%</div>
                      </div>
                      <div class="basket-product__end">
-                        <div class="basket-count-buttons buttons-block">
+                        <div class="basket-count-buttons">
                            <div class="basket-btn_plus"></div>
                            <div class="basket-btn_minus"></div>
                         </div>
