feat: like btn swap to svg element on html and get hover effect

--- a/home.html
+++ b/home.html
@@ -952,4 +952,5 @@
    <script src="./js/index.js"></script>
    <script src="./js/home-scroll.js"></script>
    <script src="./js/nav-menu.js"></script>
+   <script src="./js/like0icon.js"></script>
 </html>
