--- a/booking.html
+++ b/booking.html
@@ -274,7 +274,16 @@
                <div class="product-cards-container">
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-white" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#ffffff3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="white"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
@@ -287,7 +296,16 @@
 
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/79763\ 1.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-blk" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="#1D1D1D"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
@@ -300,7 +318,16 @@
 
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1533.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-blk" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="#1D1D1D"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
@@ -313,7 +340,16 @@
 
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-white" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#ffffff3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="white"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
@@ -546,4 +582,5 @@
    <script src="./js/booking.js"></script>
    <script src="./js/basket-scroll.js"></script>
    <script src="./js/nav-menu.js"></script>
+   <script src="./js/like0icon.js"></script>
 </html>
