feat: product like icon create svf html element and get hover effect

--- a/basket.html
+++ b/basket.html
@@ -202,7 +202,16 @@
                            <p class="basket_product__text-title">Зеркало Лучи солнца</p>
                            <p class="basket_product__text-subtitle">89 см | Золотое</p>
                         </div>
-                        <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-blk" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="#1D1D1D"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                         <div class="product_discont-value basket-sale">-15%</div>
                      </div>
                      <div class="basket-product__end">
@@ -231,7 +240,16 @@
                            <p class="basket_product__text-title">Интерьерная подушка в восточном стиле</p>
                            <p class="basket_product__text-subtitle">48 см</p>
                         </div>
-                        <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-blk" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="#1D1D1D"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                         <div class="product_discont-value basket-sale none">-15%</div>
                      </div>
                      <div class="basket-product__end">
@@ -259,7 +277,16 @@
                            <p class="basket_product__text-title">Свечи для романтического вечера Wax Lyrical</p>
                            <p class="basket_product__text-subtitle">25 см | Терракота</p>
                         </div>
-                        <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-blk" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="#1D1D1D"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                         <div class="product_discont-value basket-sale none">-15%</div>
                      </div>
                      <div class="basket-product__end">
@@ -286,7 +313,16 @@
                            <p class="basket_product__text-title">Свеча белая на подставке</p>
                            <p class="basket_product__text-subtitle">12 см | Без запаха</p>
                         </div>
-                        <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
+                        <svg class="product-card_like-btn svg-like-blk" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D3D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="#1D1D1D"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
                         <div class="product_discont-value basket-sale none">-15%</div>
                      </div>
                      <div class="basket-product__end">
